fine jumbotron,inizio pirma sezione main

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
       <div class="header-button-container clearfix::after">
 
-        <span class="button-setup hoverable-contentet">accedi</span>
+        <span class="button-setup hoverable-contentet">Accedi</span>
 
       </div>
 
@@ -46,12 +46,15 @@
 
     <div class="jumbotron-container">
 
-      <h2>SOLO COSE BELLE</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, deleniti.</p>
+      <h2>Il tuo posto per parlare</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque earum minus, esse facere nostrum optio qui expedita ex sed numquam? Cum iure dicta consequuntur maiores ipsum vitae voluptate nihil voluptas mollitia facere veniam, repellendus ab dolorum dignissimos commodi aut.</p>
       
       <div class="jumbotron-button-container">
-        <span class="button-setup">scarica per mac</span>
-        <span class="button-setup">apri discord nel tuo broswer</span>
+
+        <span class="button-setup hoverable-contentet"> <i class="fa-solid fa-arrow-down-long"></i> Scarica per Mac</span>
+
+        <span class="button-setup hoverable-contentet">Apri Discord nel tuo broswer</span>
+
       </div>
 
 
@@ -86,7 +89,7 @@
         <!-- Seconda sezione -->
 
 
-    <section class="second-section">
+    <section class="second-section wave-background-utily">
 
       <div class="second-section-container  container-size">
 
@@ -118,7 +121,7 @@
         <!-- Quarta sezione -->
 
 
-    <section class="forth-section">
+    <section class="forth-section wave-background-utily">
 
       <div class="forth-section-container  container-size">
 
